--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -6,6 +6,40 @@
     line-height: normal;
 }
 
-.root{
-   display: contents;
+.root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.unit {
+  flex: 1;
+  font-size: 12px;
+  text-align: center;
+}
+
+.value {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 44px;
+  overflow: hidden;
+  background-color: #222;
+}
+
+.semicolon {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 14px;
+  font-weight: bold;
 }
